# vtop-cli

./: .gitignore  Cargo.toml  README.md
src/: app.rs  lib.rs  main.rs  network.rs  state.rs  util.rs
src/input/: events.rs  key.rs  mod.rs
src/pages/: debug.rs  mod.rs
src/ui/: mod.rs
