[package]
name = "vtop-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.19.0", features = ["crossterm"], default-features = false }
crossterm = "0.25"
tokio = { version = "1", features = ["full"] }
eyre = "0.6.8"
backtrace = "0.3.67"